fixed alignment

--- a/styles.css
+++ b/styles.css
@@ -84,7 +84,7 @@ body{
     to{
         background-image: url("./resources/krebs.png");
         filter: none;
-        background-position: 0% 0%;
+        background-position: 40% 0%;
     }
 }
 .bgImg{
